fix(react-components): collapse/expand category filter by providing maxItemsCount via config
affects: @findify/bundle, @findify/react-components

--- a/packages/react-components/src/components/CategoryFacet/styles.css
+++ b/packages/react-components/src/components/CategoryFacet/styles.css
@@ -38,3 +38,11 @@
 .active{
   font-weight: bold;
 }
+
+.expand{
+  margin-top: 10px;
+  svg{
+    vertical-align: -3px;
+    padding-right: 5px;
+  }
+}
